--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "datasets>=3.2.0",
+    "ipdb>=0.13.13",
+    "pycocotools>=2.0.8",
+    "python-dotenv>=1.0.1",
+]
