--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "accelerate>=1.3.0",
     "datasets>=3.2.0",
+    "deepspeed>=0.16.3",
     "ipdb>=0.13.13",
     "jinja2>=3.1.5",
     "peft>=0.14.0",
