two step counting trained alright

--- a/.gitignore
+++ b/.gitignore
@@ -173,3 +173,5 @@ cython_debug/
 /vlm-r1-aha-moment
 /wandb
 /vlm-r1-aha-moment-first-successful-run
+/vlm-r1-aha-moment-counting-only
+/vlm-r1-aha-moment-counting-only-step2
