--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "accelerate>=1.3.0",
     "datasets>=3.2.0",
     "deepspeed>=0.16.3",
+    "imgcat>=0.6.0",
     "ipdb>=0.13.13",
     "jinja2>=3.1.5",
     "peft>=0.14.0",
