--- a/.gitignore
+++ b/.gitignore
@@ -175,6 +175,6 @@ cython_debug/
 /vlm-r1-aha-moment-first-successful-run
 /vlm-r1-aha-moment-counting-only
 /vlm-r1-aha-moment-counting-only-step2
-
+/vlm-r1-digit-recognition
 # folder with the data for counting mnist
 counting-mnist/
