omg it's actually working!!

--- a/.gitignore
+++ b/.gitignore
@@ -176,5 +176,6 @@ cython_debug/
 /vlm-r1-aha-moment-counting-only
 /vlm-r1-aha-moment-counting-only-step2
 /vlm-r1-digit-recognition
+/vlm-r1-digit-recognition-run-1
 # folder with the data for counting mnist
 counting-mnist/
