--- a/.gitignore
+++ b/.gitignore
@@ -177,6 +177,7 @@ cython_debug/
 /vlm-r1-aha-moment-counting-only-step2
 /vlm-r1-digit-recognition
 /vlm-r1-digit-recognition-run-1
+/vlm-r1-*
 # folder with the data for counting mnist
 counting-mnist/
 dataset/*
