--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "datasets>=3.2.0",
     "deepspeed>=0.16.3",
     "flash-attn>=2.7.4.post1",
+    "gradio>=5.16.0",
     "imgcat>=0.6.0",
     "ipdb>=0.13.13",
     "jinja2>=3.1.5",
