--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "accelerate>=1.3.0",
     "datasets>=3.2.0",
     "deepspeed>=0.16.3",
+    "flash-attn==2.5.1.post1",
     "gradio>=5.16.0",
     "imgcat>=0.6.0",
     "ipdb>=0.13.13",
