--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,6 @@ dependencies = [
     "accelerate>=1.3.0",
     "datasets>=3.2.0",
     "deepspeed>=0.16.3",
-    "flash-attn==2.5.1.post1",
     "gradio>=5.16.0",
     "imgcat>=0.6.0",
     "ipdb>=0.13.13",
@@ -24,7 +23,10 @@ dependencies = [
     "trl",
     "vllm>=0.7.2",
     "wandb>=0.19.5",
+    "verifiers",
+    "flash-attn>=2.7.3",
 ]
 
 [tool.uv.sources]
 trl = { path = "../trl", editable = true }
+verifiers = { path = "../verifiers", editable = true }
