env written (not tested yet). Added edit distance based reward as our seqs are getting long.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ dependencies = [
     "wandb>=0.19.5",
     "verifiers",
     "flash-attn>=2.7.3",
+    "levenshtein>=0.26.1",
 ]
 
 [tool.hatch.metadata]
