--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
     "verifiers",
     "flash-attn>=2.7.3",
     "levenshtein>=0.26.1",
+    "imageio>=2.37.0",
 ]
 
 [tool.hatch.metadata]
