--- a/.gitignore
+++ b/.gitignore
@@ -184,3 +184,4 @@ dataset/*
 .gradio/certificate.pem
 src/r1_vlm/datasets/message_decoding_sentences/images/
 attention_visualization*
+sentence_checkpoint_lowercase
