--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
     "verifiers",
     "flash-attn>=2.7.3",
     "imageio>=2.37.0",
+    "levenshtein>=0.27.1",
 ]
 
 [tool.hatch.metadata]
