--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "hatchling.build"
 [project]
 name = "r1-vlm"
 version = "0.1.0"
-description = "Add your description here"
+description = "GRPO for VLMs"
 readme = "README.md"
 requires-python = ">=3.12"
 authors = [
