--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
     "flash-attn>=2.7.3",
     "imageio>=2.37.0",
     "levenshtein>=0.27.1",
+    "pillow>=11.1.0",
 ]
 
 [tool.hatch.metadata]
